# Social-MPCC

./: .gitignore  README.md
Planner/lmpcc/: package.xml
Planner/lmpcc/config/: predictive_config_parameter.yaml
Planner/lmpcc/include/interfaces/: carla_interface.h
Planner/lmpcc/include/lmpcc/: base_input.h  base_model.h  base_state.h  lmpcc_controller.h  reference_path.h  rk4.hpp
Planner/lmpcc/include/scenario/: sampler.h  scenario_manager.h  static_obstacles.h
Planner/lmpcc/python_forces_code/: inequality.py  objective.py  setup_venv.sh
Planner/lmpcc/scripts/: random_crossing_scenario.py  record_screen.py  scenario.launch
Planner/lmpcc/scripts/CarlaPedestrian/: README.md  crossing_2people.xml
Planner/lmpcc/src/: lmpcc_controller.cpp  reference_path.cpp
Planner/lmpcc/src/interfaces/: carla_interface.cpp
Planner/lmpcc/src/scenario/: safety_certifier.cpp  sampler.cpp  scenario_manager.cpp
Planner/lmpcc_msgs/: CMakeLists.txt
Planner/lmpcc_msgs/msg/: Control.msg  halfspace_array.msg  lmpcc_feedback.msg  lmpcc_mog.msg  lmpcc_predict_path.msg  lmpcc_predict_point.msg
Planner/lmpcc_tools/: package.xml
Planner/lmpcc_tools/include/lmpcc_tools/: helpers.h
Planner/lmpcc_tools/src/: ros_visuals.cpp
Planner/prius_description/urdf/: prius.urdf
planner/lmpcc/: CMakeLists.txt
planner/lmpcc/cfg/: PredictiveController.cfg
planner/lmpcc/config/: carla_topics.yaml  path.yaml
planner/lmpcc/include/interfaces/: carla_interface.h  interface.h
planner/lmpcc/include/lmpcc/: lmpcc_configuration.h  lmpcc_controller.h  reference_path.h
planner/lmpcc/include/scenario/: dynamic_obstacle.h  polygon_constructor.h  safety_certifier.h
planner/lmpcc/launch/: carla_lmpcc.launch
planner/lmpcc/python_forces_code/: dynamics.py  generate_cpp_files.py  generate_solver.sh  helpers.py  setup_venv.sh  systems.py
planner/lmpcc/python_forces_code/generated_cpp/: PriusSolver.h
planner/lmpcc/python_forces_code/prius/: prius_settings.py  prius_solver.py
planner/lmpcc/rviz_config/: rviz_config.rviz
planner/lmpcc/scripts/: display.py  simulation_manager_node.py
planner/lmpcc/scripts/CarlaPedestrian/: spawn_walkers_test.py
planner/lmpcc/scripts/scenarios/: straight_road.yaml
planner/lmpcc/src/: lmpcc_configuration.cpp  lmpcc_controller.cpp  rk4.cpp
planner/lmpcc/src/interfaces/: carla_interface.cpp
planner/lmpcc/src/scenario/: dynamic_obstacle.cpp  polygon_constructor.cpp  static_obstacles.cpp
planner/lmpcc_msgs/msg/: Force.msg  gaussian.msg  halfspace.msg  observation_partitioning.msg
planner/lmpcc_tools/: CMakeLists.txt
planner/lmpcc_tools/include/lmpcc_tools/: ros_visuals.h
visual guidance/: README.md
visual guidance/src/: carla_env.py  carla_env_end2end.py  carla_env_end2end_simulated_teacher.py  evaluate_trajectories.py  feedback.py  main.py  main2.py  main2_end2end.py  main2_end2end_simulated_teacher.py  main_actor.py  main_collect_eval.py  main_init.py  main_init2_end2end.py  main_init2_end2end_simulated_teacher.py  neural_network.py  neural_network2_old.py  neural_network3.py  process_bags.py  test.py  test_end2_end.py  transition_model.py
visual guidance/src/config_files/: Carla_DCOACH_full.ini  Carla_HGDAgger_full.ini  Carla_HGDAgger_full2.ini  Carla_HGDAgger_full2_end2end_simulated_teacher.ini  Carla_HGDAgger_full2_end2end_test.ini  Carla_HGDAgger_full2_test.ini  Carla_HGDAgger_full3.ini  mountain_car_DCOACH_full.ini  mountain_car_HGDAgger_full.ini
visual guidance/src/interactive_agents/: DCOACH.py  HG_DAgger.py  HG_DAgger2.py  HG_DAgger3.py  selector.py
visual guidance/src/tools/: functions.py
